index.css
* {
    backface-visibility: hidden;
}

@font-face {
    font-family:Xolonium;
    font-style:normal;
    src:url(/static/fonts/Xolonium.ttf);
}


@keyframes pulse {

    0%   {transform: scale(0.95); opacity:1.0;transform: rotate(0deg)}
    
    50%  {transform: scale(1.0);transform: rotate(180deg)}
    /* 100% {transform: scale(1.0); opacity:1.0;transform: rotate(360deg);} */
    100% {transform: scale(0.95); opacity:1.0;transform: rotate(360deg)}
}


@keyframes radar-rotate {

    0%   { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}

@keyframes radar-dot {

    0%   { opacity: 1; }
    100% { opacity: 0; }
}

.pizza {
    transition: all 0.75s ease-in-out;
    transition-property:transform, opacity;
}

.app.meat .pizza:not(.meat),
.app.veg  .pizza:not(.veg),
.app.fish .pizza:not(.fish) {
    opacity: 0.0;
    transform: scale(0.5);
}

.app.mix .pizza.checked {
    /* background-image: url(/static/art/select.svg); */
    z-index: 4;
}

.app.mix .pizza.checked:after {
    content: '';
    color:#231561;
    position: absolute;
    background: url(/static/art/select.svg) center no-repeat;
    background-size: 40% 40%;
    height: 100%;
    width: 100%;
    left:0;


}

body {
    background-color:#070f17;
    /* background-image: url(/static/art/backgroundstars.jpg); */
    background-repeat: no-repeat;
    background-size: cover;
    font-family:'Xolonium';
    overflow-x: hidden;
}

h1 {
    color:white;
    font-size: 5vw;
}

.cosmos-zone-one-wrapper {
    background-image: url(/static/art/backgroundstars.jpg);
    /*background-repeat: no-repeat;*/
    background-size: cover;
    padding-bottom: 15vw;
}

.menu {
    width:100%;
    height:5vw;
    background-color:#433c4880;
    font-family:'Xolonium';
    font-size:1.6vw;
    display:flex; 
    justify-content: space-around;
    align-items:center;
    position:fixed;
    z-index:3;
}

    .menu a {
        padding: 0 0.1em;
        color: #fcf9f1;
        text-decoration: none;
        white-space: nowrap;
        transition:all 0.25s ease-in-out;
        /* transform: scale(1); */
    }

    .menu a:hover {
        color: #f5a623;
        transform:translate(0%, 7%) scale(1.05);
    }

    .menu a.basket {
        background-image:url(/static/art/basket.svg);
        background-size:contain;
        background-repeat:no-repeat;
        display:block;
        margin-top: 0.6%;
        height:3vw;
        width:3vw;
/*         border: 1px solid #e83a82; */
    }

.menu.mobile {
    height: 12vw;
}

    .menu.mobile a {
        color: orange;
    }

    .menu.mobile a.basket {
        background-image:url(/static/art/basket.svg);
        background-size:contain;
        background-repeat:no-repeat;
        display:block;
        margin-top: 0.6vw;
        height:8vw;
        width:8vw;

    }

    .menu.mobile a.meat {
        background-image:url(/static/art/meat.svg);
        background-size:contain;
        background-repeat:no-repeat;
        display:block;
        margin-top: 5.0vw;
        height:12vw;
        width:12vw;

    }

    .menu.mobile a.broccoli {
        background-image:url(/static/art/broccoli.svg);
        background-size:contain;
        background-repeat:no-repeat;
        display:block;
        margin-top: 0.6vw;
        height:8vw;
        width:9vw;
    }

    .menu.mobile a.fish {
        background-image:url(/static/art/fish.svg);
        background-size:contain;
        background-repeat:no-repeat;
        display:block;
        margin-top: 4.6vw;
        height:11vw;
        width:11vw;
    }

    .menu.mobile a.hamburger-menu {
        background-image:url(/static/art/hamburger-menu.svg);
        background-size:contain;
        background-repeat:no-repeat;
        display:block;
        margin-top: 0.6vw;
        height:7vw;
        width:7vw;
    }

    .menu.mobile a.mix {
        background-image:url(/static/art/mix.svg);
        background-size:contain;
        background-repeat:no-repeat;
        display:block;
        margin-top: 12.6vw;
        height:19vw;
        width:19vw;
    }



.terminal {
    display:flex;
    justify-content:center;
    padding-top:10%;
    position:relative;
    /* border: 1px solid #e83a82; */
    padding-bottom: 0.8em;
}

    .terminal svg {
        overflow:visible;
        width:26vw;
    }

    #vegButton {
        transform-origin: 45px 23px;
    }

    #meatButton {
        transform-origin: 45px 23px;
    }
    
    #fishButton {
        transform-origin: 45px 23px;
    }

    #mixButton {
        transform-origin: 65px 7px;
    }

    #meatButton, #vegButton, #fishButton, #mixButton {
        cursor:pointer;
        transition:all 0.25s ease-in-out;

    }

    #meatButton:hover, #vegButton:hover, #fishButton:hover, #mixButton:hover {
        transform:scale(1.1);
        transition:all 0.25s ease-in-out;
    }

    #meatButton:hover > *, #fishButton:hover > *, #vegButton:hover > *, #mixButton:hover > * {
        transition:all 0.25s ease-in-out;
    }

    #meatButton:hover *,
    .app.meat #meatButton * {
        stroke: coral;
        fill:coral;
    }

    .app.meat #meatButton > rect {
        fill-opacity: 0.2;
    }

    #vegButton:hover *,
    .app.veg #vegButton * {
        stroke:#009688;
        fill:#009688;
    }

    .app.veg #vegButton > rect {
        fill-opacity: 0.2;
    }

    #fishButton:hover *,
    .app.fish #fishButton * {
        stroke: #65619e;
        fill:#65619e;
    }

    .app.fish #fishButton > rect {
        fill-opacity: 0.2;
    }

    #mixButton:hover > *,
    .app.mix #mixButton > * {
        stroke: #f5a623;
        fill:#f5a623;
    }

    .app.mix #mixButton > rect {
        fill-opacity: 0.25;
    }

    #mixButton:hover text {
        stroke:none;
    }
/* ... */

